956 - Workaround for arches core bug related to null card and widget sort orders

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -328,7 +328,7 @@
                         "en": "Chance Find Protocol Document"
                     },
                     "nodegroup_id": "efc66318-e0bb-11ee-bc48-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true
                 },
                 {
@@ -526,7 +526,7 @@
                         "en": "FMO Assessment"
                     },
                     "nodegroup_id": "afc9b782-e0bc-11ee-ba58-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true
                 },
                 {
@@ -1026,7 +1026,7 @@
                         "en": "IMP FMO Approval Status"
                     },
                     "node_id": "e9394d9c-c372-11ed-b586-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000006"
                 },
@@ -1146,7 +1146,7 @@
                         "en": "Photograph View"
                     },
                     "node_id": "7eab0c44-dff6-11ee-beaf-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1175,7 +1175,7 @@
                         "en": "IMP FMO Response"
                     },
                     "node_id": "e9395120-c372-11ed-b586-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1204,7 +1204,7 @@
                         "en": "Photographer"
                     },
                     "node_id": "3b017100-d785-11ee-b1e5-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1233,7 +1233,7 @@
                         "en": "Photograph Description"
                     },
                     "node_id": "3b016eb2-d785-11ee-b1e5-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1262,7 +1262,7 @@
                         "en": "FIA FMO Response"
                     },
                     "node_id": "dbb0e91e-a360-11ed-ae42-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1280,7 +1280,7 @@
                         "en": "Site Assessment Photographs"
                     },
                     "node_id": "3b016ade-d785-11ee-b1e5-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000019"
                 },
@@ -1295,7 +1295,7 @@
                         "en": "FIA FMO Approval Status"
                     },
                     "node_id": "dbb0eda6-a360-11ed-ae42-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000006"
                 },
@@ -1324,7 +1324,7 @@
                         "en": "FIA FMO Internal Notes"
                     },
                     "node_id": "dbb0eaa4-a360-11ed-ae42-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1353,7 +1353,7 @@
                         "en": "IMP FMO Internal Notes"
                     },
                     "node_id": "e9394f7c-c372-11ed-b586-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1400,7 +1400,7 @@
                         "en": "SAP Fossil Repository Agreement"
                     },
                     "node_id": "a77d3314-dfff-11ee-bb3e-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000009"
                 },
@@ -1422,7 +1422,7 @@
                         "en": "FIA FMO Determined Level of Risk"
                     },
                     "node_id": "dbb0ec2a-a360-11ed-ae42-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000002"
                 },
@@ -1441,7 +1441,7 @@
                         "en": "Photograph Date"
                     },
                     "node_id": "3b0171fa-d785-11ee-b1e5-080027b7463b",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000004"
                 }
@@ -3273,7 +3273,7 @@
                     "isrequired": true,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "Proximity to FoS",
+                    "name": "Proximity to Fossils",
                     "nodegroup_id": "91e50dd8-9dca-11ed-9ef3-5254004d77d3",
                     "nodeid": "12d2778a-a958-11ed-9961-5254004d77d3",
                     "ontologyclass": "http://www.ics.forth.gr/isl/CRMsci/S15_Observable_Entity",
