Update dependencies to postgres 16

--- a/src/bcfms/docker/env_file.env
+++ b/src/bcfms/docker/env_file.env
@@ -1,17 +1,17 @@
 #arches
 ARCHES_PROJECT=bcfms
-ARCHES_CORE_VERSION=7-5
+ARCHES_CORE_VERSION=7-5-2
 
-ARCHES_CONTAINER_NAME=${ARCHES_PROJECT}7-5
+ARCHES_CONTAINER_NAME=${ARCHES_PROJECT}7-5-2
 PROJECT_GROUP_NAME=bcgov
 INSTALL_DEFAULT_GRAPHS=False
 INSTALL_DEFAULT_CONCEPTS=False
 PGUSERNAME=postgres
 PGPASSWORD=postgis
 PGDBNAME=$ARCHES_PROJECT
-PGHOST=postgres14-3_arches7-5
+PGHOST=postgres16-3_arches7-5-2
 PGPORT=5432
-ESHOST=elasticsearch8-3_arches7-5
+ESHOST=elasticsearch8-3_arches7-5-2
 ESPORT=9200
 DJANGO_MODE=DEV
 DJANGO_DEBUG=True
