--- a/src/bcfms/docker-compose.yml
+++ b/src/bcfms/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
-name: bcfms7-5
+name: bcfms7-5-2
 services:
   bcfms:
-    container_name:  bcfms7-5
-    image: bcgov/bcfms7-5
+    container_name: bcfms7-5-2
+    image: bcgov/bcfms7-5-2
     build:
       context: ..
       dockerfile: bcfms/Dockerfile
@@ -11,6 +11,7 @@ services:
     volumes:
       - ../arches/:/web_root/arches
       - ./:/web_root/bcfms
+      - ../common/:/web_root/common
     env_file:
       - ./docker/env_file.env
     ports:
@@ -21,8 +22,8 @@ services:
     tty: true
 
   bcfms-webpack:
-    container_name: bcfms-webpack-7-5
-    image: bcgov/bcfms-webpack-7-5
+    container_name: bcfms-webpack-7-5-2
+    image: bcgov/bcfms-webpack-7-5-2
     build:
       context: ..
       dockerfile: bcfms/docker/webpack/Dockerfile
@@ -40,7 +41,8 @@ services:
 networks:
   default:
     external: true
-    name: arches7-5-dev
+#    name: arches7-5-dev
+    name: arches7-5-2-dev
 
 
 volumes:
