--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -864,8 +864,9 @@
                         "placeholder": {
                             "en": "Enter text"
                         },
+                        "reportTypeAbbreviation": "SAP",
                         "uneditable": false,
-                        "width": "100%%"
+                        "width": "100%%%%"
                     },
                     "id": "078fa5be-a974-44ec-99ab-4d7fcdc6b3f0",
                     "label": {
@@ -874,7 +875,7 @@
                     "node_id": "7e4cbc26-c372-11ed-914a-5254004d77d3",
                     "sortorder": 0,
                     "visible": true,
-                    "widget_id": "10000000-0000-0000-0000-000000000001"
+                    "widget_id": "10000000-0000-0000-0000-000000000106"
                 },
                 {
                     "card_id": "7e4cb186-c372-11ed-914a-5254004d77d3",
@@ -1035,12 +1036,7 @@
                 {
                     "card_id": "7e4cb186-c372-11ed-914a-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -1364,12 +1360,7 @@
                 {
                     "card_id": "6d2bbce4-c372-11ed-aa09-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -1505,12 +1496,7 @@
                 {
                     "card_id": "776d6362-f148-49f9-bf57-00a89ae8ad80",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -1632,12 +1618,7 @@
                 {
                     "card_id": "dbb0d366-a360-11ed-ae42-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -1675,8 +1656,9 @@
                         "placeholder": {
                             "en": "Enter text"
                         },
+                        "reportTypeAbbreviation": "IMP",
                         "uneditable": false,
-                        "width": "100%%"
+                        "width": "100%%%%"
                     },
                     "id": "5bfcacc2-9889-4eab-a287-50a13e2f4794",
                     "label": {
@@ -1685,17 +1667,12 @@
                     "node_id": "6d2bc2b6-c372-11ed-aa09-5254004d77d3",
                     "sortorder": 0,
                     "visible": true,
-                    "widget_id": "10000000-0000-0000-0000-000000000001"
+                    "widget_id": "10000000-0000-0000-0000-000000000106"
                 },
                 {
                     "card_id": "6d2bbce4-c372-11ed-aa09-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -1719,12 +1696,7 @@
                 {
                     "card_id": "6d2bbce4-c372-11ed-aa09-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -1757,8 +1729,9 @@
                         "placeholder": {
                             "en": "Enter text"
                         },
+                        "reportTypeAbbreviation": "FIAP",
                         "uneditable": false,
-                        "width": "100%%"
+                        "width": "100%%%%"
                     },
                     "id": "6a3b0611-29fb-4362-bca8-c4e06a38210e",
                     "label": {
@@ -1767,7 +1740,7 @@
                     "node_id": "ff4fb7c8-a361-11ed-b0ab-5254004d77d3",
                     "sortorder": 0,
                     "visible": true,
-                    "widget_id": "10000000-0000-0000-0000-000000000001"
+                    "widget_id": "10000000-0000-0000-0000-000000000106"
                 },
                 {
                     "card_id": "dbb0d366-a360-11ed-ae42-5254004d77d3",
@@ -1991,8 +1964,9 @@
                         "placeholder": {
                             "en": "Enter text"
                         },
+                        "reportTypeAbbreviation": "CFP",
                         "uneditable": false,
-                        "width": "100%%"
+                        "width": "100%%%%"
                     },
                     "id": "98c723f0-6f24-437d-b7a1-5c0aac1474fa",
                     "label": {
@@ -2001,17 +1975,12 @@
                     "node_id": "604a9338-e0bd-11ee-ba58-080027b7463b",
                     "sortorder": 0,
                     "visible": true,
-                    "widget_id": "10000000-0000-0000-0000-000000000001"
+                    "widget_id": "10000000-0000-0000-0000-000000000106"
                 },
                 {
                     "card_id": "dbb0d366-a360-11ed-ae42-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -2155,8 +2124,9 @@
                         "placeholder": {
                             "en": "Enter text"
                         },
+                        "reportTypeAbbreviation": "FIA",
                         "uneditable": false,
-                        "width": "100%%"
+                        "width": "100%%%%"
                     },
                     "id": "bf8e8f06-76d8-4697-92cb-468e01113a43",
                     "label": {
@@ -2165,7 +2135,7 @@
                     "node_id": "dbb0e450-a360-11ed-ae42-5254004d77d3",
                     "sortorder": 0,
                     "visible": true,
-                    "widget_id": "10000000-0000-0000-0000-000000000001"
+                    "widget_id": "10000000-0000-0000-0000-000000000106"
                 },
                 {
                     "card_id": "9de5c571-f507-4df0-af17-a90204edd2db",
@@ -2344,12 +2314,7 @@
                 {
                     "card_id": "7e4cb186-c372-11ed-914a-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -2479,12 +2444,7 @@
                 {
                     "card_id": "dbb0d366-a360-11ed-ae42-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -2508,12 +2468,7 @@
                 {
                     "card_id": "7e4cb186-c372-11ed-914a-5254004d77d3",
                     "config": {
-                        "defaultValue": {
-                            "en": {
-                                "direction": "ltr",
-                                "value": ""
-                            }
-                        },
+                        "defaultValue": "",
                         "i18n_properties": [
                             "placeholder"
                         ],
@@ -8454,8 +8409,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "70b2406c-2f2e-11ef-9329-0242ac170007",
-                "published_time": "2024-06-20T12:56:37.750"
+                "publicationid": "09067a76-2f71-11ef-b360-0242ac170006",
+                "published_time": "2024-06-20T20:53:20.100"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
