962 - Configure layers for filter-by-feature dev - Fixed Fossil Site and IPA lost map settings - zoom level and centre point

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -2810,10 +2810,10 @@
             ],
             "color": "rgba(53,151,143,1)",
             "config": {
-                "basemap": "streets",
+                "basemap": "British Columbia Roads",
                 "bearing": 0,
-                "centerX": -122.3979693,
-                "centerY": 37.79,
+                "centerX": -125.2111215300115,
+                "centerY": 54.5952920093056,
                 "featureColor": "#FF0000",
                 "featureEditingDisabled": true,
                 "featureLineWidth": 1,
@@ -2841,7 +2841,7 @@
                 "overlayConfigs": [],
                 "overlayOpacity": 0,
                 "pitch": 0,
-                "zoom": 10
+                "zoom": 4.020978191846662
             },
             "deploymentdate": null,
             "deploymentfile": null,
