963 - Fix regressed widget ordering 639 - Add IPA details tab dev - Adjust location of report viewmodel file

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -186,7 +186,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Preliminary Study Report"
                     },
@@ -521,7 +521,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Preliminary Study Process"
                     },
@@ -688,7 +688,7 @@
                         "en": "Impact Mitigation Final Report"
                     },
                     "nodegroup_id": "3a654236-2f7c-11ef-93ea-0242ac170006",
-                    "sortorder": 0,
+                    "sortorder": 1,
                     "visible": true
                 },
                 {
@@ -908,7 +908,7 @@
                         "i18n_properties": [
                             "placeholder"
                         ],
-                        "label": "FMO IMFR Comments",
+                        "label": "FMO Comments on Impact Mitigation Final Report",
                         "maxLength": null,
                         "placeholder": {
                             "en": "Enter text"
@@ -918,10 +918,10 @@
                     },
                     "id": "050d39f3-e31a-45dd-b7d6-abd3160360c4",
                     "label": {
-                        "en": "FMO IMFR Comments"
+                        "en": "FMO Comments on Impact Mitigation Final Report"
                     },
                     "node_id": "98d9db1e-2f7d-11ef-a029-0242ac170006",
-                    "sortorder": 0,
+                    "sortorder": 2,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -993,7 +993,7 @@
                         "en": "IMP Paleo Company"
                     },
                     "node_id": "6d2bc784-c372-11ed-aa09-5254004d77d3",
-                    "sortorder": 5,
+                    "sortorder": 6,
                     "visible": true,
                     "widget_id": "31f3728c-7613-11e7-a139-784f435179ea"
                 },
@@ -1060,7 +1060,7 @@
                         "en": "Mitigation Plan File"
                     },
                     "node_id": "6d2bc450-c372-11ed-aa09-5254004d77d3",
-                    "sortorder": 3,
+                    "sortorder": 4,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000019"
                 },
@@ -1174,7 +1174,7 @@
                         "en": "Lead Paleontology Consultant"
                     },
                     "node_id": "01c483da-a3d0-11ed-8919-5254004d77d3",
-                    "sortorder": 1,
+                    "sortorder": 6,
                     "visible": true,
                     "widget_id": "31f3728c-7613-11e7-a139-784f435179ea"
                 },
@@ -1258,7 +1258,7 @@
                         "en": "Impact Mitigation Final Report"
                     },
                     "node_id": "a861d380-2f7c-11ef-93ea-0242ac170006",
-                    "sortorder": 0,
+                    "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000019"
                 },
@@ -1345,7 +1345,7 @@
                         "en": "PSR File"
                     },
                     "node_id": "78147c0c-a3d0-11ed-afdd-5254004d77d3",
-                    "sortorder": 0,
+                    "sortorder": 3,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000019"
                 },
@@ -1381,7 +1381,7 @@
                         "en": "IMP Paleo Consultant"
                     },
                     "node_id": "6d2bbf1e-c372-11ed-aa09-5254004d77d3",
-                    "sortorder": 1,
+                    "sortorder": 2,
                     "visible": true,
                     "widget_id": "31f3728c-7613-11e7-a139-784f435179ea"
                 },
@@ -1473,7 +1473,7 @@
                         "en": "IMP Title"
                     },
                     "node_id": "6d2bc5e0-c372-11ed-aa09-5254004d77d3",
-                    "sortorder": 4,
+                    "sortorder": 5,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1585,7 +1585,7 @@
                         "en": "PSR Recommendation"
                     },
                     "node_id": "9a01982c-a3d0-11ed-8ef6-5254004d77d3",
-                    "sortorder": 0,
+                    "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1630,7 +1630,7 @@
                         "en": "PSR Paleo Company"
                     },
                     "node_id": "3c248dc8-a884-11ed-9606-5254004d77d3",
-                    "sortorder": 0,
+                    "sortorder": 2,
                     "visible": true,
                     "widget_id": "31f3728c-7613-11e7-a139-784f435179ea"
                 },
@@ -1701,7 +1701,7 @@
                         "en": "PSR Consultant Report Number"
                     },
                     "node_id": "5b6b2740-a3d0-11ed-99ab-5254004d77d3",
-                    "sortorder": 0,
+                    "sortorder": 4,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1803,7 +1803,7 @@
                         "en": "IMP Consultant Report Number"
                     },
                     "node_id": "6d2bc108-c372-11ed-aa09-5254004d77d3",
-                    "sortorder": 2,
+                    "sortorder": 3,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1827,7 +1827,7 @@
                         "en": "IMP Recommendations"
                     },
                     "node_id": "6d2bc91e-c372-11ed-aa09-5254004d77d3",
-                    "sortorder": 6,
+                    "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -1918,7 +1918,7 @@
                         "en": "PSR Title"
                     },
                     "node_id": "e1e38138-a3cf-11ed-8a3d-5254004d77d3",
-                    "sortorder": 0,
+                    "sortorder": 5,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -2024,6 +2024,26 @@
                     "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
+                },
+                {
+                    "card_id": "13b3e5e3-5a25-4414-8360-d9b9b2ccea6b",
+                    "config": {
+                        "dateFormat": "YYYY-MM-DD",
+                        "defaultValue": "",
+                        "label": "Assessment Completion Date",
+                        "maxDate": false,
+                        "minDate": false,
+                        "placeholder": "Enter date",
+                        "viewMode": "days"
+                    },
+                    "id": "7f52740f-b807-4be5-a4cf-d2fbde1dd308",
+                    "label": {
+                        "en": "Assessment Completion Date"
+                    },
+                    "node_id": "080f5c92-2809-11ef-8c2b-0242ac120007",
+                    "sortorder": 1,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000004"
                 },
                 {
                     "card_id": "3ed0fa37-95e4-4f59-90cc-74db40a41010",
@@ -2515,7 +2535,7 @@
                         "en": "IMFR - FMO Approval Status"
                     },
                     "node_id": "4893c54c-2f7e-11ef-9621-0242ac170006",
-                    "sortorder": 0,
+                    "sortorder": 3,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000006"
                 },
@@ -2594,7 +2614,7 @@
                         "en": "FMO Comments on Impact Mitigation Final Report"
                     },
                     "node_id": "98d9db1e-2f7d-11ef-a029-0242ac170006",
-                    "sortorder": 0,
+                    "sortorder": 2,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000005"
                 },
@@ -2669,6 +2689,26 @@
                     "sortorder": 4,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000019"
+                },
+                {
+                    "card_id": "13b3e5e3-5a25-4414-8360-d9b9b2ccea6b",
+                    "config": {
+                        "dateFormat": "YYYY-MM-DD",
+                        "defaultValue": "",
+                        "label": "Assessment Start Date",
+                        "maxDate": false,
+                        "minDate": false,
+                        "placeholder": "Enter date",
+                        "viewMode": "days"
+                    },
+                    "id": "dabd9036-63e0-4ac6-9324-b1f445cb44c4",
+                    "label": {
+                        "en": "Assessment Start Date"
+                    },
+                    "node_id": "67997a7e-9dc4-11ed-9ef3-5254004d77d3",
+                    "sortorder": 0,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000004"
                 },
                 {
                     "card_id": "0241361a-c373-11ed-af52-5254004d77d3",
@@ -2810,10 +2850,10 @@
             ],
             "color": "rgba(53,151,143,1)",
             "config": {
-                "basemap": "British Columbia Roads",
+                "basemap": "streets",
                 "bearing": 0,
-                "centerX": -125.2111215300115,
-                "centerY": 54.5952920093056,
+                "centerX": -122.3979693,
+                "centerY": 37.79,
                 "featureColor": "#FF0000",
                 "featureEditingDisabled": true,
                 "featureLineWidth": 1,
@@ -2841,7 +2881,7 @@
                 "overlayConfigs": [],
                 "overlayOpacity": 0,
                 "pitch": 0,
-                "zoom": 4.020978191846662
+                "zoom": 10
             },
             "deploymentdate": null,
             "deploymentfile": null,
@@ -4157,7 +4197,7 @@
             ],
             "graphid": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
             "iconclass": "fa fa-diamond",
-            "is_editable": false,
+            "is_editable": true,
             "isresource": true,
             "jsonldcontext": null,
             "name": {
@@ -5446,7 +5486,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "fmo_imfr_approval_status",
+                    "alias": "imfr_fmo_approval_status",
                     "config": {
                         "falseLabel": {
                             "en": "Requires Changes"
@@ -5469,7 +5509,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "FMO IMFR Approval Status",
+                    "name": "IMFR FMO Approval Status",
                     "nodegroup_id": "3a654236-2f7c-11ef-93ea-0242ac170006",
                     "nodeid": "4893c54c-2f7e-11ef-9621-0242ac170006",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E3_Condition_State",
@@ -7080,7 +7120,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "fmo_imfr_comments",
+                    "alias": "imfr_fmo_comments",
                     "config": {
                         "en": ""
                     },
@@ -7094,7 +7134,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "FMO IMFR Comments",
+                    "name": "IMFR FMO Comments",
                     "nodegroup_id": "3a654236-2f7c-11ef-93ea-0242ac170006",
                     "nodeid": "98d9db1e-2f7d-11ef-a029-0242ac170006",
                     "ontologyclass": "http://www.ics.forth.gr/isl/CRMdig/D29_Annotation_Object",
@@ -7126,7 +7166,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "fmo_safr_comments",
+                    "alias": "safr_fmo_comments",
                     "config": {
                         "en": ""
                     },
@@ -7140,7 +7180,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "FMO SAFR Comments",
+                    "name": "SAFR FMO Comments",
                     "nodegroup_id": "1570c3ca-2f80-11ef-9e9f-0242ac170006",
                     "nodeid": "9a38535c-2f80-11ef-9e9f-0242ac170006",
                     "ontologyclass": "http://www.ics.forth.gr/isl/CRMdig/D29_Annotation_Object",
@@ -7606,7 +7646,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "fmo_safr_approval_status",
+                    "alias": "safr_fmo_approval_status",
                     "config": {
                         "falseLabel": {
                             "en": "Requires Changes"
@@ -7629,7 +7669,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "FMO SAFR Approval Status",
+                    "name": "SAFR FMO Approval Status",
                     "nodegroup_id": "1570c3ca-2f80-11ef-9e9f-0242ac170006",
                     "nodeid": "b2c0f604-2f80-11ef-9e9f-0242ac170006",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E3_Condition_State",
@@ -9115,8 +9155,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "d195bdf2-2f81-11ef-9e9f-0242ac170006",
-                "published_time": "2024-06-20T22:53:28.531"
+                "publicationid": "67709a5a-33be-11ef-b47d-0242ac170006",
+                "published_time": "2024-06-26T08:17:14.401"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -9152,8 +9192,8 @@
     ],
     "metadata": {
         "db": "PostgreSQL 16.3 (Debian 16.3-1.pgdg110+1) on x86_64-pc-linux-gnu, compiled by gcc (Debian 10.2.1-6) 10.2.1 20210110, 64-bit",
-        "git hash": "5d0d8577d 2024-06-20 08:45:57 -0700",
+        "git hash": "6928cbe43 2024-06-21 15:22:35 -0700",
         "os": "Linux",
-        "os version": "6.6.22-linuxkit"
+        "os version": "6.6.31-linuxkit"
     }
 }
