--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -1584,7 +1584,7 @@
                         "acceptedFiles": "",
                         "defaultValue": [],
                         "label": "PSR File",
-                        "maxFilesize": "200",
+                        "maxFilesize": "50",
                         "rerender": true
                     },
                     "id": "2757fe40-5a87-4c9c-a2a3-fb93e2ba5d09",
@@ -1944,7 +1944,7 @@
                         "i18n_properties": [
                             "placeholder"
                         ],
-                        "label": "PSR Recommendation",
+                        "label": "PSR Recommendations",
                         "maxLength": null,
                         "placeholder": {
                             "en": "Enter text"
@@ -1954,7 +1954,7 @@
                     },
                     "id": "482f4abe-febc-42eb-aef9-b0e08f4aca49",
                     "label": {
-                        "en": "PSR Recommendation"
+                        "en": "PSR Recommendations"
                     },
                     "node_id": "9a01982c-a3d0-11ed-8ef6-5254004d77d3",
                     "sortorder": 6,
@@ -1984,6 +1984,24 @@
                     "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
+                },
+                {
+                    "card_id": "ee4b957f-5462-44aa-a93f-ca4bc0853a66",
+                    "config": {
+                        "acceptedFiles": ".pdf, .jpg, .jpeg, .png, .shp",
+                        "defaultValue": [],
+                        "label": "Project Documents",
+                        "maxFilesize": "100",
+                        "rerender": true
+                    },
+                    "id": "4fa2ca38-3792-4a5c-820c-7e94e4629084",
+                    "label": {
+                        "en": "Project Documents"
+                    },
+                    "node_id": "a881e5f6-9dc6-11ed-82b6-5254004d77d3",
+                    "sortorder": null,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000019"
                 },
                 {
                     "card_id": "224f7282-cbf6-49de-ab0d-67ba7fe19e93",
@@ -2085,7 +2103,7 @@
                             "placeholder"
                         ],
                         "label": "PSR Consultant Report Number",
-                        "maxLength": null,
+                        "maxLength": "40",
                         "placeholder": {
                             "en": "Enter text"
                         },
@@ -2282,9 +2300,9 @@
                             "placeholder"
                         ],
                         "label": "SAFR Title",
-                        "maxLength": null,
+                        "maxLength": "80",
                         "placeholder": {
-                            "en": "Enter text"
+                            "en": "Enter SAFR Title"
                         },
                         "uneditable": false,
                         "width": "100%%"
@@ -2433,12 +2451,17 @@
                 {
                     "card_id": "224f7282-cbf6-49de-ab0d-67ba7fe19e93",
                     "config": {
-                        "defaultValue": "",
+                        "defaultValue": {
+                            "en": {
+                                "direction": "ltr",
+                                "value": "Enter title of the PSR"
+                            }
+                        },
                         "i18n_properties": [
                             "placeholder"
                         ],
                         "label": "PSR Title",
-                        "maxLength": null,
+                        "maxLength": "80",
                         "placeholder": {
                             "en": "Enter text"
                         },
@@ -2784,7 +2807,7 @@
                         "i18n_properties": [
                             "placeholder"
                         ],
-                        "label": "FIAP Report Recommendation",
+                        "label": "FIAP Report Recommendations",
                         "maxLength": null,
                         "placeholder": {
                             "en": "Enter text"
@@ -2794,7 +2817,7 @@
                     },
                     "id": "a3dd5803-6320-41f9-94f9-b59c4051e2a8",
                     "label": {
-                        "en": "FIAP Report Recommendation"
+                        "en": "FIAP Report Recommendations"
                     },
                     "node_id": "3767acaa-a3cc-11ed-ac97-5254004d77d3",
                     "sortorder": 6,
@@ -6170,7 +6193,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "fiap_report_recommendation",
+                    "alias": "fiap_report_recommendations",
                     "config": {
                         "en": ""
                     },
@@ -6184,7 +6207,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "FIAP Report Recommendation",
+                    "name": "FIAP Report Recommendations",
                     "nodegroup_id": "ff4fa0f8-a361-11ed-b0ab-5254004d77d3",
                     "nodeid": "3767acaa-a3cc-11ed-ac97-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E89_Propositional_Object",
@@ -8225,7 +8248,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "psr_recommendation",
+                    "alias": "psr_recommendations",
                     "config": {
                         "en": ""
                     },
@@ -8239,7 +8262,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "PSR Recommendation",
+                    "name": "PSR Recommendations",
                     "nodegroup_id": "a0993e7a-a3cf-11ed-8a45-5254004d77d3",
                     "nodeid": "9a01982c-a3d0-11ed-8ef6-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E73_Information_Object",
@@ -10283,8 +10306,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "bc2767a6-34d4-11ef-960d-0242ac170009",
-                "published_time": "2024-06-27T17:29:36.618"
+                "publicationid": "d2d28560-34d6-11ef-84ee-0242ac170009",
+                "published_time": "2024-06-27T17:44:33.643"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
