--- a/src/bcfms/bcfms/package.json
+++ b/src/bcfms/bcfms/package.json
@@ -10,7 +10,8 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.5.2"
     },
     "dependencies": {
-        "arches": "archesproject/arches#7.5.2"
+        "arches": "archesproject/arches#7.5.2",
+        "shpjs": "~6.1.0"
     },
     "nodeModulesPaths": {
     }
