608 - Debugging library import

--- a/src/bcfms/bcfms/package.json
+++ b/src/bcfms/bcfms/package.json
@@ -14,5 +14,7 @@
         "shpjs": "~6.1.0"
     },
     "nodeModulesPaths": {
+        "shpjsesm": "node_modules/shpjs/dist/shp.esm",
+        "shpjs": "node_modules/shpjs/dist/shp"
     }
 }
