1044 - Allow > 2000 record export

--- a/src/bcrhp/bcrhp/package.json
+++ b/src/bcrhp/bcrhp/package.json
@@ -10,8 +10,10 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.5.2"
     },
     "dependencies": {
-        "arches": "archesproject/arches#7.5.2"
+        "arches": "archesproject/arches#7.5.2",
+        "shpjs": "~6.1.0"
     },
     "nodeModulesPaths": {
+        "shpjsesm": "node_modules/shpjs/dist/shp.esm"
     }
 }
