1084 - Update core to 7.6.3, remove redundant shpjsesm path 1120 - Fix GET/POST logic for large filters, update custom search config and class reference for 7.6

--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -27,10 +27,8 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.1"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.1",
-        "shpjs": "~6.1.0"
+        "arches": "archesproject/arches#stable/7.6.3"
     },
     "nodeModulesPaths": {
-        "shpjsesm": "node_modules/shpjs/dist/shp.esm"
     }
 }
