1174 - Interim commit of Vue framework (needs work)

--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -27,8 +27,8 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.1"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.3"
+        "arches": "archesproject/arches#stable/7.6.3",
+        "vue-router": "^4.4.3"
     },
-    "nodeModulesPaths": {
-    }
+    "nodeModulesPaths": {}
 }
