--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -28,7 +28,8 @@
     },
     "dependencies": {
         "arches": "archesproject/arches#stable/7.6.3",
-        "vue-router": "^4.4.3"
+        "vue-router": "^4.4.3",
+        "zod": "^3.23.8"
     },
     "nodeModulesPaths": {}
 }
