1146 - Fix css 404s, use arches core slick assets 1081 - Add common css to .gitignore

--- a/src/bcrhp/.gitignore
+++ b/src/bcrhp/.gitignore
@@ -19,6 +19,7 @@ coverage/
 # Common resources that are copied from arches_common
 bcrhp/media/css/project_common.css
 bcrhp/media/css/bc_index.css
+bcrhp/media/css/map_legend_common.css
 node_modules
 .vscode/
 CACHE
