1197 - Rough out python unit tests 1155 - Fix User API URL Fix Arches dependency

--- a/src/bcfms/pyproject.toml
+++ b/src/bcfms/pyproject.toml
@@ -24,8 +24,8 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-#    "arches>=7.6.1,<7.7.0",
-    "arches @ git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov",
+    "arches>=7.6.3,<7.7.0",
+#    "arches@git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov",
 ]
 version = "1.2.0"
 
