1156 - Split common functionality into bcgov_arches_common package, rework docker config 1146 - fix BCFMS splash page caption dev - Reformat with black

--- a/src/bcfms/docker-compose.yml
+++ b/src/bcfms/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ../arches/:/web_root/arches
       - ./:/web_root/bcfms
       - ../common/:/web_root/common
+      - ../arches_common/:/web_root/arches_common
     env_file:
       - ./docker/env_file.env
     ports:
