--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -27,7 +27,9 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.1"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.3"
+        "arches": "archesproject/arches#stable/7.6.3",
+        "bcgov_arches_common": "bcgov/arches_common#feat/rename_app",
+        "typescript": "^5.6.2"
     },
     "nodeModulesPaths": {}
 }
