--- a/src/bcfms/pyproject.toml
+++ b/src/bcfms/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
 #    "arches>=7.6.1,<7.7.0",
-    "arches @ git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov",
-    "arches_common @ git+https://github.com/bcgov/arches_common.git#feat/rename_app",
+    "arches @ git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov_11578_11679_11689",
+    "bcgov_arches_common @ git+https://github.com/bcgov/arches_common.git@feat/rename_app",
 ]
 version = "1.1.0"
 
