--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -29,7 +29,7 @@
     "dependencies": {
         "arches": "archesproject/arches#stable/7.6.3",
         "bcgov_arches_common": "bcgov/arches_common#feat/rename_app",
-        "typescript": "^5.6.2"
+        "@mapbox/mapbox-gl-draw": "1.4.3"
     },
     "nodeModulesPaths": {}
 }
