--- a/src/bcfms/pyproject.toml
+++ b/src/bcfms/pyproject.toml
@@ -24,9 +24,9 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-#    "arches>=7.6.1,<7.7.0",
-    "arches @ git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov_11578_11679_11689",
-    "bcgov_arches_common @ git+https://github.com/bcgov/arches_common.git@feat/rename_app",
+    "arches>=7.6.3,<7.7.0",
+#    "arches @ git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov_11578_11679_11689",
+    "bcgov_arches_common>=0.9.0,<1.0.0",
 ]
 version = "1.1.0"
 
