1203 - First cut at moving common assets to separate application dev - Run settings through black

--- a/src/bcrhp/docker-compose.yml
+++ b/src/bcrhp/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ../arches/:/web_root/arches
       - ./:/web_root/bcrhp
+      - ../arches_common/:/web_root/arches_common
     env_file:
       - ./docker/env_file.env
     ports:
