--- a/src/bcrhp/package.json
+++ b/src/bcrhp/package.json
@@ -27,8 +27,9 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.3"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.3"
+        "@mapbox/mapbox-gl-draw": "1.4.3",
+        "arches": "archesproject/arches#stable/7.6.3",
+        "bcgov_arches_common": "bcgov/arches_common#feat/rename_app"
     },
-    "nodeModulesPaths": {
-    }
+    "nodeModulesPaths": {}
 }
