--- a/src/bcrhp/pyproject.toml
+++ b/src/bcrhp/pyproject.toml
@@ -25,7 +25,8 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
 #    "arches>=7.6.1,<7.7.0",
-    "arches @ git+https://github.com/bcgov/arches.git@stable/7.6.3_bcgov",
+    "arches==7.6.3",
+    "bcgov_arches_common==0.9.0",
 ]
 
 version = "1.3.0"
