Update Arches Core version

--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -27,9 +27,8 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.4"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.3",
-        "bcgov_arches_common": "bcgov/arches_common#feat/rename_app",
-        "@mapbox/mapbox-gl-draw": "1.4.3"
+        "arches": "archesproject/arches#stable/7.6.4",
+        "bcgov_arches_common": "github:bcgov/arches_common#feat/rename_app"
     },
     "nodeModulesPaths": {}
 }
