--- a/src/bcrhp/package.json
+++ b/src/bcrhp/package.json
@@ -1,6 +1,7 @@
 {
     "name": "bcrhp",
     "license": "AGPL-3.0-only",
+    "version": "1.3.0-a.0",
     "scripts": {
         "build_development": "npm i typescript@5.6.2 && npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 webpack --config ./webpack/webpack.config.dev.js",
         "build_production": "npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 NODE_ENV=production webpack --config ./webpack/webpack.config.prod.js",
@@ -24,12 +25,12 @@
         "underscore": "^1.13.6"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.3"
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.4"
     },
     "dependencies": {
         "@mapbox/mapbox-gl-draw": "1.4.3",
-        "arches": "archesproject/arches#stable/7.6.3",
-        "bcgov_arches_common": "bcgov/arches_common#feat/rename_app"
+        "arches": "archesproject/arches#stable/7.6.4",
+        "bcgov_arches_common": "github:bcgov/arches_common"
     },
     "nodeModulesPaths": {}
 }
