Update arches core version numbers in dependencies.

--- a/src/bcrhp/package.json
+++ b/src/bcrhp/package.json
@@ -3,7 +3,7 @@
     "license": "AGPL-3.0-only",
     "version": "1.3.0-a.0",
     "scripts": {
-        "build_development": "npm i typescript@5.6.2 && npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 webpack --config ./webpack/webpack.config.dev.js",
+        "build_development": "npm i typescript@5.6.2 && cross-env NODE_OPTIONS=--max-old-space-size=2048 webpack --config ./webpack/webpack.config.dev.js",
         "build_production": "npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 NODE_ENV=production webpack --config ./webpack/webpack.config.prod.js",
         "build_test": "npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 webpack --config ./webpack/webpack.config.dev.js --env test=true",
         "eslint:check": "eslint **/src",
@@ -28,9 +28,9 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.4"
     },
     "dependencies": {
-        "@mapbox/mapbox-gl-draw": "1.4.3",
-        "arches": "archesproject/arches#stable/7.6.4",
-        "bcgov_arches_common": "github:bcgov/arches_common"
+        "arches": "github:bcgov/arches#stable/7.6.4_bcgov_11578_11716_11729",
+        "bcgov_arches_common": "github:bcgov/arches_common",
+        "typescript": "^5.6.2"
     },
     "nodeModulesPaths": {}
 }
