dev - Bump dependency version numbers in preparation for PROD deployment.

--- a/src/bcrhp/package.json
+++ b/src/bcrhp/package.json
@@ -28,7 +28,7 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.4"
     },
     "dependencies": {
-        "arches": "github:bcgov/arches#stable/7.6.4_bcgov_11578_11716_11729",
+        "arches": "github:bcgov/arches#v7.6.4.1_bcgov",
         "bcgov_arches_common": "github:bcgov/arches_common",
         "typescript": "^5.6.2"
     },
