dev - Bump dependency version numbers in preparation for PROD release

--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -28,7 +28,7 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.4"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.4",
+        "arches": "github:bcgov/arches#v7.6.4.1_bcgov",
         "bcgov_arches_common": "github:bcgov/arches_common"
     },
     "nodeModulesPaths": {}
