1086 - Fix docker config for Arches Core 7.6 and Arches Common App

--- a/src/bcfms/docker/webpack/Dockerfile
+++ b/src/bcfms/docker/webpack/Dockerfile
@@ -3,6 +3,7 @@ USER root
 ENV WEB_ROOT=/web_root
 ENV ARCHES_ROOT=${WEB_ROOT}/arches
 ENV APP_ROOT=${WEB_ROOT}/bcfms
+ENV ARCHES_COMMON=${WEB_ROOT}/arches_common
 #ENV AFS_ROOT=${WEB_ROOT}/arches-for-science
 ENV NODE_MAJOR=20
 RUN mkdir -p ${APP_ROOT}/bcfms/webpack
@@ -32,15 +33,19 @@ RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3 get-pip.p
   && pip install setuptools python-dotenv django-storages
 
 COPY ./arches ${ARCHES_ROOT}
-#COPY ../arches-for-science ${AFS_ROOT}
+COPY ./arches_common ${ARCHES_COMMON}
+
 RUN apt-get update && apt-get -y install curl \
-  && apt-get install nodejs && npm install -g yarn && apt install wait-for-it
+  && apt-get install nodejs && apt install wait-for-it
 
 #WORKDIR ${AFS_ROOT}
 #RUN pip show setuptools && pip --version && pip install -e . && pip uninstall arches -y
 
 WORKDIR ${ARCHES_ROOT}
 RUN pip install -e . --user
+
+WORKDIR ${ARCHES_COMMON}
+RUN pip install -e .
 
 COPY /bcfms/docker/webpack/entrypoint.sh ${WEB_ROOT}/entrypoint.sh
 RUN chmod -R 700 ${WEB_ROOT}/entrypoint.sh
