--- a/src/bcfms/docker-compose.yml
+++ b/src/bcfms/docker-compose.yml
@@ -23,14 +23,15 @@ services:
     tty: true
 
   bcfms-webpack:
-    container_name: bcfms-webpack-7-6-1
-    image: bcgov/bcfms-webpack-7-6-1
+    container_name: bcfms-webpack7-6-1
+    image: bcgov/bcfms-webpack7-6-1
     build:
       context: ..
       dockerfile: bcfms/docker/webpack/Dockerfile
     command: run_webpack
     volumes:
       - ../arches/:/web_root/arches
+      - ../arches_common/:/web_root/arches_common
       - ./:/web_root/bcfms
     env_file:
       - ./docker/webpack/env_file.env
