--- a/src/bcfms/Dockerfile
+++ b/src/bcfms/Dockerfile
@@ -6,6 +6,7 @@ ENV WEB_ROOT=/web_root
 ENV APP_ROOT=${WEB_ROOT}/${PROJECT_NAME}
 # Root project folder
 ENV ARCHES_ROOT=${WEB_ROOT}/arches
+ENV ARCHES_COMMON_ROOT=${WEB_ROOT}/arches_common
 ENV PG_TILESERV_ROOT=${WEB_ROOT}/pg_tileserv
 ENV WHEELS=/wheels
 ENV PYTHONUNBUFFERED=1
@@ -49,10 +50,16 @@ RUN rm -rf /root/.cache/pip/*
 # Install the Arches application
 # FIXME: ADD from github repository instead?
 COPY ./arches ${ARCHES_ROOT}
+COPY ./arches_common ${ARCHES_COMMON_ROOT}
 # From here, run commands from ARCHES_ROOT
 WORKDIR ${ARCHES_ROOT}
 RUN pip install -e .[dev]&& \
-    pip install python-dotenv boto3==1.26 django-storages==1.13 oracledb html2text
+    pip install python-dotenv boto3==1.26 django-storages==1.13 oracledb html2text cffi redis && \
+    pip install --upgrade cryptography PyJWT
+
+WORKDIR ${ARCHES_COMMON_ROOT}
+RUN pip install -e .
+
 COPY ./bcfms/docker/entrypoint.sh ${WEB_ROOT}/entrypoint.sh
 RUN chmod -R 700 ${WEB_ROOT}/entrypoint.sh &&\
   dos2unix ${WEB_ROOT}/entrypoint.sh
@@ -60,7 +67,7 @@ RUN mkdir /var/log/supervisor
 RUN mkdir /var/log/celery
 # Set default workdir
 WORKDIR ${APP_ROOT}
-COPY ../common/* ${PROJECT_NAME}/
+#COPY ../common/* ${PROJECT_NAME}/
 
 # Install PG Tileserv software
 ADD https://postgisftw.s3.amazonaws.com/pg_tileserv_latest_linux.zip ${PG_TILESERV_ROOT}
