--- a/src/bcfms/docker-compose.yml
+++ b/src/bcfms/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
-name: bcfms7-6-1
+name: bcfms7-6
 services:
   bcfms:
-    container_name: bcfms7-6-1
-    image: bcgov/bcfms7-6-1
+    container_name: bcfms7-6
+    image: bcgov/bcfms7-6
     build:
       context: ..
       dockerfile: bcfms/Dockerfile
@@ -23,8 +23,8 @@ services:
     tty: true
 
   bcfms-webpack:
-    container_name: bcfms-webpack7-6-1
-    image: bcgov/bcfms-webpack7-6-1
+    container_name: bcfms-webpack7-6
+    image: bcgov/bcfms-webpack7-6
     build:
       context: ..
       dockerfile: bcfms/docker/webpack/Dockerfile
