--- a/src/bcfms/docker/env_file.env
+++ b/src/bcfms/docker/env_file.env
@@ -1,8 +1,8 @@
 #arches
 ARCHES_PROJECT=bcfms
-ARCHES_CORE_VERSION=7-6-1
+ARCHES_CORE_VERSION=7-6
 
-ARCHES_CONTAINER_NAME=${ARCHES_PROJECT}7-6-1
+ARCHES_CONTAINER_NAME=${ARCHES_PROJECT}7-6
 PROJECT_GROUP_NAME=bcgov
 INSTALL_DEFAULT_GRAPHS=False
 INSTALL_DEFAULT_CONCEPTS=False
